# requests-ntlm

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
appveyor/: setup_iis.ps1
docs/: index.md  index.rst
requests_ntlm/: __init__.py  requests_ntlm.py  requests_ntlmsspi.py
tests/: test_functional.py  test_requests_ntlm.py  test_server.py  test_utils.py
tests/functional/: setup_iis.ps1  test_functional.py
tests/unit/: __init__.py  test_requests_ntlm.py  test_server_certificate.py
