[build-system]
requires = [
    "setuptools >= 42.0.0",  # Supports license_files
]
build-backend = "setuptools.build_meta"

[tool.black]
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "setup\\.py|build/|tests/"
mypy_path = "$MYPY_CONFIG_FILE_DIR"
python_version = "3.8"
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "requests.packages.urllib3.*"
ignore_missing_imports = true
