[metadata]
name = requests_ntlm
version = 1.2.0
url = https://github.com/requests/requests-ntlm
author = Ben Toews
author_email = mastahyeti@gmail.com
license = ISC
license_files = LICENSE
description = This package allows for HTTP NTLM authentication using the requests library.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: ISC License (ISCL)

[options]
python_requires = >= 3.7
install_requires =
    cryptography >= 1.3
    pyspnego >= 0.4.0
    requests >= 2.0.0
